[gd_scene load_steps=15 format=2]

[ext_resource path="res://Worlds/World_1.gd" type="Script" id=1]
[ext_resource path="res://kirifont/KiriFont.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Flower/Flower3.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://GUI/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://Worlds/WormSpawner.gd" type="Script" id=6]
[ext_resource path="res://NPCs/Worm1.tscn" type="PackedScene" id=7]
[ext_resource path="res://NPCs/Worm3.tscn" type="PackedScene" id=8]
[ext_resource path="res://NPCs/Worm2.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=4]
size = 40
outline_size = 5
outline_color = Color( 0.807843, 0.764706, 0.12549, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 978, 11 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15, 575 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 90, 533 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1000, 37.5 )

[node name="World_1" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 4.0
margin_right = 1920.0
margin_bottom = 1084.0
color = Color( 0.196078, 0.541176, 0.12549, 1 )

[node name="CountdownLabel" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_right = 1923.0
margin_bottom = 1040.0
custom_fonts/font = SubResource( 4 )
text = "Countdown"
align = 1
valign = 2

[node name="Walls" type="Node" parent="."]

[node name="WallTop" type="StaticBody2D" parent="Walls"]
position = Vector2( 967, -12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallTop"]
shape = SubResource( 1 )

[node name="WallBottom" type="StaticBody2D" parent="Walls"]
position = Vector2( 963, 1095 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallBottom"]
shape = SubResource( 1 )

[node name="WallLeft" type="StaticBody2D" parent="Walls"]
position = Vector2( 30, 179 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallLeft"]
position = Vector2( -47, 383 )
shape = SubResource( 2 )

[node name="WallRight" type="StaticBody2D" parent="Walls"]
position = Vector2( 1986, 165 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallRight"]
position = Vector2( -47, 383 )
shape = SubResource( 2 )

[node name="Stripes" type="Node" parent="."]

[node name="Strip1" type="Area2D" parent="Stripes" groups=["Strip"]]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stripes/Strip1"]
position = Vector2( 112, 535 )
shape = SubResource( 3 )

[node name="Strip2" type="Area2D" parent="Stripes" groups=["Strip"]]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stripes/Strip2"]
position = Vector2( 311, 541 )
shape = SubResource( 3 )

[node name="Flower3" parent="Stripes/Strip2" instance=ExtResource( 3 )]
position = Vector2( 311, 433 )

[node name="Strip3" type="Area2D" parent="Stripes" groups=["Strip"]]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stripes/Strip3"]
position = Vector2( 506, 542 )
shape = SubResource( 3 )

[node name="Strip4" type="Area2D" parent="Stripes" groups=["Strip"]]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stripes/Strip4"]
position = Vector2( 698, 545 )
shape = SubResource( 3 )

[node name="Flower3" parent="Stripes/Strip4" instance=ExtResource( 3 )]
position = Vector2( 699, 710 )

[node name="Strip5" type="Area2D" parent="Stripes" groups=["Strip"]]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stripes/Strip5"]
position = Vector2( 884, 546 )
shape = SubResource( 3 )

[node name="Strip6" type="Area2D" parent="Stripes" groups=["Strip"]]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stripes/Strip6"]
position = Vector2( 1071, 542 )
shape = SubResource( 3 )

[node name="Flower3" parent="Stripes/Strip6" instance=ExtResource( 3 )]
position = Vector2( 1080, 314 )

[node name="Strip7" type="Area2D" parent="Stripes" groups=["Strip"]]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stripes/Strip7"]
position = Vector2( 1257, 543 )
shape = SubResource( 3 )

[node name="Strip8" type="Area2D" parent="Stripes" groups=["Strip"]]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stripes/Strip8"]
position = Vector2( 1447, 548 )
shape = SubResource( 3 )

[node name="Flower3" parent="Stripes/Strip8" instance=ExtResource( 3 )]
position = Vector2( 1448, 656 )

[node name="Strip9" type="Area2D" parent="Stripes" groups=["Strip"]]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stripes/Strip9"]
position = Vector2( 1634, 542 )
shape = SubResource( 3 )

[node name="Strip10" type="Area2D" parent="Stripes" groups=["Strip"]]
position = Vector2( 0, 1 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stripes/Strip10"]
position = Vector2( 1823, 540 )
shape = SubResource( 3 )

[node name="Flower3" parent="Stripes/Strip10" instance=ExtResource( 3 )]
position = Vector2( 1831, 313 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 960, 950 )
z_index = 1
score = 1

[node name="WormSpawner" type="Node" parent="."]
script = ExtResource( 6 )
worms = [ ExtResource( 9 ), ExtResource( 8 ), ExtResource( 7 ) ]

[node name="SpawnPositions" type="Node" parent="WormSpawner"]

[node name="WormStart1" type="Position2D" parent="WormSpawner/SpawnPositions"]
position = Vector2( 135, -101 )

[node name="WormStart2" type="Position2D" parent="WormSpawner/SpawnPositions"]
position = Vector2( 520, -201 )

[node name="WormStart3" type="Position2D" parent="WormSpawner/SpawnPositions"]
position = Vector2( 877, -155 )

[node name="WormStart4" type="Position2D" parent="WormSpawner/SpawnPositions"]
position = Vector2( 1296, -99 )

[node name="WormStart5" type="Position2D" parent="WormSpawner/SpawnPositions"]
position = Vector2( 1658, -119 )

[node name="SpawnTimer" type="Timer" parent="WormSpawner"]
autostart = true

[node name="MusicTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="StopTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BackTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="RestartMusicTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="GUILayer" groups=["hud"] instance=ExtResource( 5 )]

[node name="DeathZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
position = Vector2( 962, 1177 )
shape = SubResource( 5 )

[connection signal="spawn_worm" from="WormSpawner" to="." method="spawn_worm"]
[connection signal="timeout" from="WormSpawner/SpawnTimer" to="WormSpawner" method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="MusicTimer" to="." method="_on_MusicTimer_timeout"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
[connection signal="timeout" from="StopTimer" to="." method="_on_StopTimer_timeout"]
[connection signal="timeout" from="BackTimer" to="." method="_on_BackTimer_timeout"]
[connection signal="timeout" from="RestartMusicTimer" to="." method="_on_RestartMusicTimer_timeout"]
[connection signal="area_entered" from="DeathZone" to="." method="_on_DeathZone_area_entered"]
